# gfortran_openacc

./: CMakeLists.txt  Makefile  README.md  vector_add_openacc.f90
.github/workflows/: ci.yml
cmake/: FindOpenACC.cmake
cuda_wrapper/: ptxas
